--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,8 @@ body,
   width: 100vw;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
   background: transparent;
 }
 
